--- a/trading_with_momentum.ipynb
+++ b/trading_with_momentum.ipynb
@@ -6864,8 +6864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### View Data\n",
-    "Let's see what values we get with our portfolio. After you run this, make sure to answer the question below."
+    "### Analysis"
    ]
   },
   {
@@ -6898,7 +6897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question: What p-value did you observe? And what does that indicate about your signal?"
+    "### Findings"
    ]
   },
   {
@@ -6910,14 +6909,6 @@
     "p-value > 𝛼 (of 0.05).\n",
     "\n",
     "Therefore fail to reject the null hypothesis which means the mean return from the signal likely to be zero."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Submission\n",
-    "Now that you're done with the project, it's time to submit it. Click the submit button in the bottom right. One of our reviewers will give you feedback on your project with a pass or not passed grade. You can continue to the next section while you wait for feedback."
    ]
   }
  ],
